6993078: JSR 292 too many pushes:  Lesp points into register window

Reviewed-by: kvn, never